Add extra key in composer.json defining plugin class

--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,9 @@
     "require": {
         "composer-plugin-api": "1.0.0"
     },
+    "extra": {
+        "class": "AnduFratu\\CakePphConfigInstaller\\Plugin"
+    },
     "license": "MIT",
     "authors": [
         {
